<resources>
    <string name="app_name">Erasmus Party</string>
    <string name="welcome">Welcome to the Erasmus Party App</string>
    <string name="button_lab1">LAB 1</string>
    <string name="erasmus_party_app">Erasmus Party App</string>
    <string name="button_core_app">Core App</string>
    <string name="venue_picture">venuePicture</string>
    <string name="action_add_venue">Add Venue</string>
    <string name="action_request_venue">Request New Venue</string>
    <string name="venue_name">Venue</string>
    <string name="venue_rating">Rating: X/5</string>
    <string name="facebook_application_id">2401198669957036</string>
    <string name="fb_login_protocol_scheme">fb2401198669957036</string>
    <string name="attend">I\'m Going</string>
    <string name="dontgo">I\'m Not Going</string>
    <string name="sort">Sort</string>
    <string name="search">Search</string>
    <string name="maps">Maps</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="login">Login</string>
    <string name="nationality">Nationality</string>
    <string name="email">Email</string>
    <string name="reset_password">Type in your account\'s email address and hit OK to receive an email to reset your password.</string>
    <string name="not_registered_yet"><u>Not registered yet? Sign Up here.</u></string>
    <string name="forgot_password"><u>Forgot Password? Reset Here.</u></string>
    <string name="already_registered"> <u>Already registered? Login here.</u> </string>
    <string name="sign_up">Sign Up</string>
    <string name="guests_tonight">Guests</string>
    <string name="nationalities_tonight">Guests from:</string>
    <string name="nobody_attends_yet">Be the first one to attend!</string>
    <string name="venues_title">Bars &amp; Clubs</string>
    <string name="popular">Popular</string>
    <string name="alphabetic">Alphabetic</string>
    <string name="logout">Log Out</string>
    <string name="tell_city">Tell us which city you are staying in: </string>
    <string name="cannot_find_city">Can\'t find your city? Become your cities host!</string>
    <string name="tell_nationality">Tell us your nationality please: </string>
    <string name="lets_go_party">Let\'s go!</string>
    <string name="today_text">Today: </string>
    <string name="tomorrow_text">Tomorrow: </string>
    <string name="thedayaftertomorrow_text">The Day After Tomorrow: </string>
    <string name="about">About</string>
    <string name="needs_location">We need your location to show bars and clubs near you.</string>
    <string name="add_google_place">Find a bar or nightclub that Erasmus people love and click to add it to your city\'s list.</string>
    <string name="add_place_to_list">ADD PLACE</string>
    <string name="map_iv_description">Click here for seeing the venue on the map.</string>
    <string name="google_rating">Google Rating:\u0020</string>
    <string name="title_activity_maps">Map</string>
    <string name="share_button">Share Button</string>
    <string name="bar">BAR</string>
    <string name="night_club">NIGHT CLUB</string>
    <string name="bar_night_club">BAR/NIGHT CLUB</string>
    <string name="buy_me_a_coffee">Buy Me a Coffee</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="icons8_link"> All icons are provided by www.icons8.com</string>
    <string name="flat_icons_link">All flag-icons are made by Freepik from www.flaticon.com</string>
    <string name="mail_feedback_email">t.stimakovits@outlook.com</string>
    <string name="mail_feedback_subject">Feedback on Erasmus Party App</string>
    <string name="mail_feedback_message">My Feedback: </string>
    <string name="title_send_feedback">Send feedback</string>
    <string name="edit">Edit</string>
    <string name="reset_password_short">Reset Password</string>
    <string name="placeholder">Placeholder</string>
    <string name="profile_username">Username: </string>
    <string name="profile_nationality">Nationality: </string>
    <string name="profile_city">City: </string>
    <string name="profile">Profile</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Erasmus Party App</string>
    <string name="slide_1_desc">Find the coolest Bars and Clubs for Erasmus Students and Internationals!</string>
    <string name="slide_2_title">Who\'s where?</string>
    <string name="slide_2_desc">See how many people are attending each venue and where they are from!</string>
    <string name="slide_3_title">Global Player</string>
    <string name="slide_3_desc">Attend a Bar or Club with just one Click and have fun with people from all over the world!</string>
    <string name="share">Share</string>
</resources>