<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_request_venue"
        android:title="@string/action_request_venue"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_profile"
        android:title="@string/profile"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_maps"
        android:title="@string/maps"
        android:icon="@drawable/ic_map_white_24dp"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.widget.SearchView"
        />
</menu>