<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_padding_horizontal"
    android:paddingStart="@dimen/activity_padding_horizontal"
    android:paddingEnd="@dimen/activity_padding_horizontal"
    tools:context=".AboutActivity">

    <ImageView
        android:id="@+id/bar_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_beer_96" />

    <ImageView
        android:id="@+id/night_club_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/bar_icon"
        app:layout_constraintTop_toBottomOf="@+id/bar_icon"
        app:srcCompat="@drawable/icon_dancing2_96" />

    <TextView
        android:id="@+id/night_club_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/night_club"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textSizeLarge"
        app:layout_constraintBottom_toBottomOf="@+id/night_club_icon"
        app:layout_constraintStart_toStartOf="@+id/bar_tv"
        app:layout_constraintTop_toTopOf="@+id/night_club_icon" />

    <ImageView
        android:id="@+id/bar_night_club_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/night_club_icon"
        app:layout_constraintTop_toBottomOf="@+id/night_club_icon"
        app:srcCompat="@drawable/icon_disco2_100" />


    <TextView
        android:id="@+id/bar_night_club_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bar_night_club"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textSizeLarge"
        app:layout_constraintBottom_toBottomOf="@+id/bar_night_club_icon"
        app:layout_constraintStart_toStartOf="@+id/night_club_tv"
        app:layout_constraintTop_toTopOf="@+id/bar_night_club_icon" />

    <TextView
        android:id="@+id/bar_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/bar"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textSizeLarge"
        app:layout_constraintBottom_toBottomOf="@+id/bar_icon"
        app:layout_constraintStart_toEndOf="@+id/bar_icon"
        app:layout_constraintTop_toTopOf="@+id/bar_icon" />

    <TextView
        android:id="@+id/icons8_link_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/icons8_link"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textSizeSmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/google_rating_textview" />

    <TextView
        android:id="@+id/flaticon_link_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/flat_icons_link"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textSizeSmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icons8_link_tv" />

    <ImageButton
        android:id="@+id/feedback_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_green_round"
        android:paddingStart="40dp"
        android:paddingTop="20dp"
        android:paddingEnd="40dp"
        android:paddingBottom="20dp"
        android:src="@drawable/icon_feedback_80"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toStartOf="@+id/buy_me_a_coffee_button"
        app:layout_constraintTop_toBottomOf="@+id/bar_night_club_icon" />

    <ImageButton
        android:id="@+id/buy_me_a_coffee_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/button_green_round"
        android:paddingStart="40dp"
        android:paddingTop="20dp"
        android:paddingEnd="40dp"
        android:paddingBottom="20dp"
        android:src="@drawable/icon_coffee_80"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buy_me_a_coffee_tv"
        app:layout_constraintTop_toBottomOf="@+id/feedback_button" />

    <TextView
        android:id="@+id/feedback_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_feedback"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textSizeLarge"
        app:layout_constraintBottom_toBottomOf="@+id/feedback_button"
        app:layout_constraintStart_toStartOf="@+id/bar_night_club_icon"
        app:layout_constraintTop_toTopOf="@+id/feedback_button" />

    <TextView
        android:id="@+id/buy_me_a_coffee_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buy_me_a_coffee"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textSizeLarge"
        app:layout_constraintBottom_toBottomOf="@+id/buy_me_a_coffee_button"
        app:layout_constraintStart_toStartOf="@+id/feedback_tv"
        app:layout_constraintTop_toTopOf="@+id/buy_me_a_coffee_button" />

    <TextView
        android:id="@+id/google_rating_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/google_rating"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textSizeSmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buy_me_a_coffee_button" />


</androidx.constraintlayout.widget.ConstraintLayout>


