<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    android:paddingStart="@dimen/activity_padding_horizontal"
    android:paddingEnd="@dimen/activity_padding_horizontal">

    <LinearLayout
        android:id="@+id/linear_layout_city_setup"
        android:paddingTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/baumans"
            android:text="@string/erasmus_party_app"
            android:textColor="@color/colorWhite"
            android:textSize="37sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_view_username"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:textSize="@dimen/textSizeLarge"
            android:layout_gravity="left"
            android:text="@string/tell_city"/>


        <Spinner
            android:id="@+id/spinner_cities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            />

        <TextView
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_view_tell_nationality"
            android:textColor="#fff"
            android:textSize="@dimen/textSizeLarge"
            android:layout_gravity="left"
            android:text="@string/tell_nationality"/>

        <Spinner
            android:id="@+id/spinner_nationality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType ="text"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            />

        <Button
            android:id="@+id/lets_go_button"
            android:layout_height="60dp"
            android:layout_width="match_parent"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_style_citysetup_selector"
            android:gravity="center"
            android:text="@string/lets_go_party" />

        <ProgressBar
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTint="@color/colorWhite"
            android:indeterminateTintMode="src_atop" />

    </LinearLayout>


</RelativeLayout>